--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -1,5 +1,5 @@
 ---
-title: A new metric for automatic discovery of periodic patterns in time series
+title: A new metric for automatic data visualization for distributional difference in time series
 
 # to produce blinded version set to 1
 blinded: 0
@@ -55,23 +55,6 @@ output:
 options("knitr.graphics.auto_pdf" = TRUE,
         tinytex.verbose = FALSE)
 library(knitr)
-library(tidyverse)
-library(lubridate)
-library(lvplot)
-#library(ggridges)
-library(viridis)
-library(tsibble)
-library(gravitas)
-library(ggpubr)
-library(readr)
-library(kableExtra)
-library(distributional)
-library(ggplot2)
-library(sugrrants)
-library(here)
-library(ggplot2)
-library(patchwork)
-
 opts_chunk$set(
   echo = FALSE, warning = FALSE, message = FALSE, comment = "#>",
   fig.path = "figure/", fig.align = "center", fig.show = "hold",
@@ -79,8 +62,7 @@ opts_chunk$set(
   out.width = ifelse(is_html_output(), "100%", "\\textwidth")
 )
 knitr::opts_knit$set(root.dir = here::here())
-#                                                                read_chunk('main.R')
-here::here()
+#                                                     read_chunk('main.R')
 #knitr::read_chunk(here::here("paper/R/", "null_distribution.R"))
 #knitr::read_chunk(here::here("paper/R/", "mean_null.R"))
 #source(here::here("paper/R/sim_panel.R"))
@@ -93,11 +75,17 @@ here::here()
 ```
 
 
+```{r external, include = FALSE, cache = FALSE}
+read_chunk("paper/scripts/main.R")
+```
+
+```{r load}
+```
+
 
 ```{r}
 set.seed(321)
 ```
-
 
 # Introduction
 
@@ -109,24 +97,7 @@ Exploratory data analysis, as coined by John W. Tukey (Tukey 1965) involves many
 
 
 ```{r calendar-elec, fig.height = 8, fig.cap = "Calendar displays faceted by two households are shown. The calendar displays are rich in information and has several components. For example, it can be observed easily that the level of energy consumption by household 2 is higher than household 4. Also, it gives an overview on when these households are away for holidays and which months consumptions are highest (Jan, Feb). However, when it comes to discerning periodic patterns, analyzing all possible periodic patterns through this display is overwhelming due to combination of linear and cyclic representation of time. For example, there is more going on in terms of peaks and troughs in id 2 compared to id 4, but it is not clear which all periodic patterns are dominant and if it differs between households."}
-elec <- read_rds(here("paper/data/elec.rds")) %>% 
-  filter(date >= ymd("20180101"), date < ymd("20180701"))
-rdbl <- c("Weekday" = "#d7191c", "Weekend" = "#2c7bb6")
 
-elec <- elec %>% 
-  mutate(
-    wday = wday(date, label = TRUE, week_start = 1),
-    weekday = if_else(wday %in% c("Sat", "Sun"), "Weekend", "Weekday")
-  )
-p_cal_elec <- elec %>% 
-  filter(id %in% c(2, 4)) %>% 
-  frame_calendar(x = time, y = kwh, date = date, nrow = 1) %>% 
-    ggplot(aes(x = .time, y = .kwh, group = date)) +
-    geom_line(aes(colour = as.factor(id)), size = 0.5) +
-    scale_colour_brewer(name = "", palette = "Dark2", direction = 1) +
-    facet_grid(id ~ ., labeller = label_both) +
-    theme(legend.position = "bottom")
-prettify(p_cal_elec, size = 2.5, label.padding = unit(0.1, "lines"))
 ```
 
 
@@ -137,72 +108,12 @@ prettify(p_cal_elec, size = 2.5, label.padding = unit(0.1, "lines"))
 
 ```{r intro_all}
 
-id2_tsibble <- elec %>% 
-   filter(id == 2) %>% 
-   as_tsibble(index = date_time)
-  
-id4_tsibble <- elec %>% 
-   filter(id == 4) %>% 
-   as_tsibble(index = date_time)
-
-# hour-of-day and month-of-year (important pair) id2's behavior across different hours of the day very different across months, but for id4 behavior across different hours of the day is not likely a function of month.
-p1 <- id2_tsibble %>%
-   prob_plot("month_year",
-             "hour_day",
-             response = "kwh",
-             plot_type = "quantile",
-             symmetric = TRUE,
-             quantile_prob = c(0.1, 0.25,0.5,0.75, 0.9)) +
-  ggtitle("") + theme(
-        strip.text = element_text(size = 10, margin = margin(b = 0, t = 0))) + 
-  scale_colour_brewer(name = "", palette = "PiYG")
-
-p2 <- id4_tsibble %>%
-   prob_plot("month_year",
-             "hour_day",
-             response = "kwh",
-             plot_type = "quantile",
-             symmetric = TRUE,
-             quantile_prob = c(0.1, 0.25,0.5,0.75, 0.9)) + 
-  ggtitle("a") + theme(
-        strip.text = element_text(size = 10, margin = margin(b = 0, t = 0)))
-
-
-p3 <- id2_tsibble %>%
-  create_gran("week_month") %>% 
-  filter(week_month != 5) %>% 
-   prob_plot("wknd_wday",
-             "week_month",
-             response = "kwh",
-             plot_type = "quantile",
-             symmetric = FALSE,
-             quantile_prob = c(0.25,0.5,0.75)) +
-   ggtitle("") +
-
-        theme(strip.text = element_text(size = 10, margin = margin(b = 0, t = 0)))
-
-p4 <- id4_tsibble %>%
-    create_gran("week_month") %>% 
-  filter(week_month != 5) %>% 
-   prob_plot("wknd_wday",
-             "week_month",
-             response = "kwh",
-             plot_type = "quantile",
-             symmetric = FALSE,
-             quantile_prob = c(0.25,0.5,0.75)) +
-  ggtitle("b") +  #+ scale_x_discrete(breaks = seq(0, 23, 4)) + 
-theme(
-        strip.text = element_text(size = 10, margin = margin(b = 0, t = 0)))
-
 ```
 
 
 ```{r}
 id2_tsibble %>%
-  create_gran("month_year") %>% 
-  ggplot() +
-  geom_lv(aes(x = month_year, y = kwh)) 
-  
+  create_gran("month_year") %>%
    prob_plot("month_year",
              "hour_day",
              response = "kwh",
@@ -217,11 +128,10 @@ id2_tsibble %>%
 
 
 ```{r id2, fig.cap = "Distribution of energy consumption displayed through area quantile plots across two cyclic granularities month-of-year and hour-of-day for id2 (left) and id4 (right). The black line is the median, whereas the orange band covers the 25th to 75th percentile and the green band covers the 10th to 90th percentile. Difference between the 90th and 75th quantiles is less for (Jan, Feb) in id2 suggesting that it is a more frequent user of air conditioner than id4. Energy consumption for id2 changes across both granularities, whereas for id4 daily pattern stays same irrespective of the months."}
-ggpubr::ggarrange(p1, p2, ncol = 2)
 ```
 
 ```{r id4, fig.cap = "something2", eval = FALSE}
-ggpubr::ggarrange(p3, p4, ncol = 2)
+
 ```
 
 Even when it is known which all interactions to look at, all of them would not be interesting and that too will vary across different households. For example, area distribution quantiles are plotted for household 2 and 4 in Figure \ref{fig:id2}a and \ref{fig:id2}b respectively across month-of-year on facets and hour-of-day on x-axis. For the first household, the 75th and 90th percentile for January and February are very close, implying that energy usage for these months are generally on a much higher side, possibly due to the usage of air conditioners (January and February are peak summer in Australia), however for other months (Autumn and winter), the difference between the percentiles are not high, implying this household do not use so much heater as compared to air conditioner. Also, a lot of households in Victoria use gas heating and hence the usage of heaters might not be reflected here. The energy consumption for household 2 is also higher in summer months relative to autumn or winter, but the 75th and 90th percentile are far apart in all months, implying that the second household resorts to air conditioners much less regularly than the first one. Moreover, the 75th percentile distribution does not follow the same pattern as 90th percentile for all months for the first household, whereas, the pattern looks pretty similar for all months for the second household. Difference in the energy consumption could vary both across month-of-year (facets) and hour-of-day (x-axis). For the first household, both these cyclic granularities would deem important. Although, it seems like energy consumption across hours of the day are not that different across different months for the second household or atleast differences seem to be more prominent across month-of-year (facets) than hour-of-day (x-axis). It could be immensely useful to make the transition from all possible ways to only ways that could potentially be informative.
@@ -239,8 +149,6 @@ Even when it is known which all interactions to look at, all of them would not b
 
 <!-- what is the dimension of the problem -->
 The paper @Gupta2020-vo describes how we can compute all possible combinations of cyclic time granularities. Let $N_C$ be the total number of contextual circular, quasi-circular and aperiodic cyclic granularities that can originate from the underlying linear granularities. The graphical mapping is such that distributions of a numeric response variable is displayed across combinations of cyclic granularities, one placed at x-axis and the other on the facet. That essentially implies there are $^{N_C}P_2$ possible pairwise plots exhaustively, where each plot would display a pair of cyclic granularities. This is large and overwhelming for human consumption.<!-- Scagnostics literature --> This problem is similar to Scagnostics (Scatterplot Diagnostics) by @tukey1988computer, which is used to discern meaningful patterns in large collections of scatterplots. Given a set of $v$ variables, there are $v(v-1)/2$ pairs of variables, and thus the same number of possible pairwise scatterplots. Therefore, even for small $v$, the number of scatterplots can be large, and scatterplot matrices (SPLOMs) could easily run out of pixels when presenting high-dimensional data. @Dang2014-tw and @wilkinson2005graph provides potential solutions to this, where few characterizations help us to locate anomalies in density, shape, trend, and other features in the 2D point scatters. 
-
-
 
 
 <!-- harmonies and why it is not enough -->
@@ -284,98 +192,6 @@ Thus, a distance measure aimed to capture this structure should ideally estimate
 
 ```{r null4by2,fig.cap = "A graphical display with two categories mapped to x-axis and 3 categories mapped to facets with the distribution of a continuous random variable plotted on the y-axis. Display a is not interesting as the distribution of the variable does not depend on x or facet categories. Display b and c are more interesting than a since there is a change in distribution either across facets (b) or x-axis (c). Display d is most interesting in terms of displaying the strongest pattern as distribution of the variable changes across both facet and x-axis variable."}
 
-sim_varall_normal <- function(nx, nfacet, mean, sd, w) {
-  dist_normal((mean + seq(0,
-    (nx *
-      nfacet - 1),
-    by = 1
-  ) * w), sd)
-}
-sim_panel_varall <- sim_panel(
-  nx = 2, nfacet = 3,
-  ntimes = 500,
-  sim_dist = sim_varall_normal(2, 3, 5, 10, 5)
-) %>% unnest(data)
-
-p_varall <- sim_panel_varall %>%
-  rename("facet level" = "id_facet" ) %>% 
-  ggplot(aes(x = as.factor(id_x), y = sim_data)) + 
-  facet_wrap(~`facet level`,labeller = "label_both") + 
-  geom_boxplot() +
-  ggtitle("") +
-  xlab("x level") +
-  ylab("")
-
-
-sim_varx_normal <- function(nx, nfacet, mean, sd, w) {
-   rep(dist_normal((mean + seq(0, nx - 1, by = 1) * w), sd), nfacet)
- }
-
-sim_panel_varx <- sim_panel(
-   nx = 2, nfacet = 3,
-   ntimes = 500,
-   sim_dist = sim_varx_normal(2, 3, 5, 10, 5)
- ) %>% unnest(data)
-
-
-p_varx <- sim_panel_varx %>%
-  rename("facet level" = "id_facet" ) %>% 
-  ggplot(aes(x = as.factor(id_x), y = sim_data)) + 
-  facet_wrap(~`facet level`,labeller = "label_both") + 
-  ggtitle("") +
-  geom_boxplot() +
-  xlab("x level") +
-  ylab("simulated response")
-
-
-
-sim_varf_normal <- function(nx, nfacet, mean, sd, w) {
-  rep(dist_normal((mean + seq(0, nfacet - 1, by = 1) * w), sd), each = nx)
-}
-
-sim_panel_varf <- sim_panel(
-  nx = 2, nfacet = 3,
-  ntimes = 500,
-  sim_dist = sim_varf_normal(2, 3, 5, 10, 5)
-) %>% unnest(data)
-
-
-p_varf <- sim_panel_varf %>%
-  rename("facet level" = "id_facet" ) %>% 
-  ggplot(aes(x = as.factor(id_x), y = sim_data)) +
-  facet_wrap(~`facet level`,labeller = "label_both") + 
-  geom_boxplot() +
-  ggtitle("") +
-  xlab("x level") +
-  ylab("")
-
-
-
-sim_panel_null <- sim_panel(
-   nx = 2,
-   nfacet = 3,
-   ntimes = 500,
-   sim_dist = distributional
-   ::dist_normal(5, 10)
-) %>% unnest(c(data))
-
-set.seed(9999)
-
-
-p_null <- sim_panel_null %>%
-  rename("facet level" = "id_facet" ) %>% 
-  ggplot(aes(x = as.factor(id_x), y = sim_data)) +
-  facet_wrap(~`facet level`,labeller = "label_both") +
-  geom_boxplot() +
-  ggtitle("") +
-  xlab("x level") +
-  ylab("simulated response")
-
-
-ggpubr::ggarrange(p_null, p_varf,  p_varx, p_varall, nrow = 2, ncol = 2,
-                  common.legend = TRUE,
-                  labels = c("a", "b", "c", "d"))
-
 ```
 
 
@@ -386,26 +202,7 @@ ggpubr::ggarrange(p_null, p_varf,  p_varx, p_varall, nrow = 2, ncol = 2,
 Consider two cyclic granularities $A$ and $B$, such that $A = \{ a_j: j = 1, 2, \dots, J\}$ and $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets. Let $v = \{v_t: t = 0, 1, 2, \dots, T-1\}$ be a continuous variable observed across $T$ time points. Let the four elementary designs as described in Figure \ref{fig:null4by2} be $D_{null}$ where there is no difference in distribution of $v$ for $A$ or $B$, $D_{var_f}$ denotes the set of designs where there is difference in distribution of $v$ for $B$ and not for $A$. Similarly, $D_{var_x}$ denotes the set of designs where difference is observed only across A. Finally, $D_{var_{all}}$ denotes those designs for which difference is observed across both $A$ and $B$.
 
 
-```{r}
-d1 <- tibble (variable = c("nx", "nfacet", "$N_C$", "$H_{N_C}$", "$lambda$", "$omega$", "$wpd$","$nperm$", "$nsim$"),  description = c("number of x categories", "number of facet categories","number of cyclic granularities", "set of harmonies", "tuning parameter", "mean increment", "raw distance measure", "number of permutations for threshold/normalization", "number of simulations"))
-        
-        
-d2 <- tibble(variable =  c("$wpd_{norm}$", 
-                           "$wpd_{threshold}$",
-                           "$D_{null}$",
-                           "$D_{var_f}$", 
-                           "$D_{var_x}$",
-                           "$D_{var_{all}}$"), 
-             description = c("normalized distance measure",
-                             "threshold for significance",
-                             "null design",
-                             "design with varying facets only", 
-                             "design with varying x only", 
-                             "design with varying both facets and x"))
-
-
-d <- bind_rows(d1, d2)
-knitr::kable(d, format = "markdown", escape = FALSE, caption = "Nomenclature table")
+```{r notations}
 
 ```
 
@@ -463,7 +260,7 @@ The distance measure $wpd$ between two cyclic granularities $A$ and $B$ is aimed
 <!-- Hence, differences in distributions of the measured variable are computed between all pairs of categories $(a_{j} b_{k}, a_{j'}b_{k'}): j = 1, 2, \dots, J\}, B = \{ b_k: k = 1, 2, \dots, K\}$. Percentiles of $v_{jk}$ and $v_{j'k'}$ are computed and stored in $q_{jk}$ and $q_{j'k'}$ respectively. Then the pairwise distances between pairs $(a_{j} b_{k}, a_{j'}b_{k'})$ be denoted as $d_{(jk, j'k')} = JSD(q_{jk}, q_{j'k'})$ is computed. Pairwise distances could be within-facets or between-facets. Figure \ref{fig:distance-explain} illustrates how the within-facet or between-facet distances are defined. Pairwise distances are within-facets ($d_{w}$) when $b_{k} = b_{k'}$, that is, between pairs of the form $(a_{j}b_{k}, a_{j'}b_{k})$ as shown in panel (3) of Figure \ref{fig:distance-explain}. If categories are ordered (like all temporal cyclic granularities), then only distances between pairs where $a_{j'} = (a_{j+1})$ are considered (panel (4)). Pairwise distances are between-facets ($d_{b}$) when they are considered between pairs of the form $(a_{j}b_{k}, a_{j}b_{k'})$. Number of between-facet distances would be $^{K}C_2*J$ and number of within-facet distances are $K*(J-1)$ (ordered) and $^{J}C_2*K$ (un-ordered). The pairwise distances $d_{(jk, j'k')}$ are transformed using a suitable tuning parameter ($0<\lambda<1$) depending on if they are $d_{b}$ or $d_{w}$ as follows: -->
 
 ```{r distance-explain, fig.cap = "Within and between-facet distances shown for two cyclic granularities A and B, where A is mapped to x-axis and B is mapped to facets. The dotted lines represent the distances between different categories. Panel 1) and 2) show the between-facet distances. Panel 3) and 4) are used to illustrate within-facet distances when categories are un-ordered or ordered respectively. When categories are ordered, distances should only be considered for consecutive x-axis categories. Between-facet distances are distances between different facet levels for the same x-axis category, for example, distances between {($a_1$,$b_1$) and ($a_1$, $b_2$)} or {($a_1$,$b_1$) and ($a_1$, $b_3$)}."}
-knitr::include_graphics(here::here("paper/Figs/dist_explain.png"))
+
 ```
 
 1. Perform NQT on the measured variable $v_t$ to obtain $v^*_t$.
@@ -578,22 +375,10 @@ Figure \ref{fig:raw} shows the distribution of $wpd$ plotted across different $n
 
 
 ```{r raw, fig.cap = "Distribution of $wpd$ is plotted across different $nx$ and $nfacet$ categories under $D_{null}$. Both shape and scale of the distribution changes for different comparisons. This is not desirable since under null design, the distribution of the distance measure is not expected to capture any differences."}
-G21 <- read_rds("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_Gamma21.rds")
 
-G21 %>% 
-  ggplot(aes(x = value)) + 
-  geom_density(fill = "blue") +
-  facet_grid(nx~nfacet,
-             labeller = "label_both") + 
-  scale_x_continuous(breaks = scales::breaks_extended(3)) + 
-  xlab("wpd")
 ```
 
 ```{r quadratic, fig.cap = "$wpd$ is plotted against $nx*nfacet$ (the maximum number of pairwise comparisons) and the blue line represents the median of the multiple values for each $nx*nfacet$. The median increases abruptly for lower values of $nx*nfacet$ and slowly for higher $nx*nfacet$. Thus, the measure will have higher values for higher levels in $nx$ or $nfacet$."}
-G21 %>% 
-  ggplot(aes(x=nx*nfacet, y = value)) +
-  geom_point(alpha = 0.5, size = 0.5) + stat_summary(fun=median, geom="line", aes(group=1), color = "blue") + xlab("nx*nfacet") + ylab("wpd")
-
 ```
 
 # Normalization for the number of comparisons {#sec:norm-wpd}
@@ -631,15 +416,6 @@ Standardizing  $wpd$ in the permutation approach ensures that the distribution o
 
 
 ```{r norm, fig.cap = "Distribution of $wpd_{perm}$ is plotted across different $nx$ and $nfacet$ categories. Both shape and scale of the distributions are now similar for different panels under the null design."}
-G21_norm <- read_rds(here("simulations/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_Gamma21.rds"))
-
-G21_norm %>% 
-  ggplot(aes(x = value)) + 
-  geom_density(fill = "blue") +
-  facet_grid(nx~nfacet,
-             labeller = "label_both") + 
-  scale_x_continuous(breaks = scales::breaks_extended(3)) + 
-  xlab("wpd normalised using permutation approach")
 ```
 
 
@@ -651,17 +427,7 @@ _Linear model_
 A linear model is fitted to model the relationship between $wpd$ and $nx*nfacet$. The model is of the form $$y_l = a+b*log(z_l) + e_l$$, where, $y_l = median_m(wpd_{l, m})$, $z_l$ is the $l^{th}$ panel and $e_l$ are idiosyncratic errors, with parameters $a$ and $b$ being estimated from the data generated through the simulation study described in Section \ref{sec:sim-study}. The estimates and other model summary is given in Table \ref{tab:linear-model}.
 
 ```{r linear-model, message=FALSE}
-G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_N01.rds"))
 
-G21_median <- G21 %>% 
-  group_by(nx*nfacet) %>% 
-  summarise(actual = median(value))
-
-
-# fit model median to log(nx*nfacet)
-fit_lm2 <- lm(actual ~ log(`nx * nfacet`) , data = G21_median)
-
-broom::tidy(fit_lm2) %>% kable(caption = "Results of linear model to capture the relationship between wpd and number of comparisons.")
 ```
 
 
@@ -680,14 +446,6 @@ Defining $wpd_{linear}$ in this way forces the mean to be zero and variability t
 <!-- But, the original distribution will still have some dissimilarities in shape and location specially for small values of $nx$ and $nfacet$ as could be seen in \ref{fig:} -->
 
 ```{r resi-linear, fig.cap = "$wpd_{norm}^{linear}$ which are defined as the residuals of the linear model have mean zero and are homogenous. Further, by design they are independent of the $nx*nfacet$ and hence could be a potential candidate for $wpd_norm$."}
-
-intercept <- fit_lm2$coefficients[1]
-slope <- fit_lm2$coefficients[2]
-
-G21 %>% 
-  ggplot(aes(x=log(nx*nfacet), y = (value - slope*log(nx*nfacet)))) +
-  geom_point(alpha = 0.5, size = 0.5) + stat_summary(fun=mean, geom="line", aes(group=1), color = "blue") + 
-  ylab("wpd normalised using linear modelling approach")
 ```
 
 
@@ -710,62 +468,6 @@ $wpd_{glm} = wpd - 1/(\hat a + \hat b*log(nx*nfacet))$.
 <!-- - subtracting the intercept brings the location of the transformed variable to 0 for either case -->
 <!-- - heterogeneity is higher for this case after normalization as compared to the earlier one. -->
 
-```{r wpd-glm-horizontal, echo = FALSE, message=FALSE, fig.caption = "$wpd_{glm}$ is plotted against log(nx*nfacet) and this transformation causes the median of $wpd_{glm}$ to have no relationship with log(nx*nfacet)"}
-
-G21 <- read_rds(here("simulations/raw/null_design_quantrans/data-agg/all_data_wpd_N01.rds"))
-
-G21_median <- G21 %>% 
-  group_by(nx*nfacet) %>% 
-  summarise(actual = median(value))
-
-
-
-glm_fit <- glm(actual ~ log(`nx * nfacet`),
-              family = Gamma(link = "inverse"),
-              data = G21_median)
-
-intercept <- glm_fit$coefficients[1]
-slope <- glm_fit$coefficients[2]
-
-
-G21_sd  = G21 %>% 
-    mutate(wpd_glm =  (value - (1/(intercept + slope*log(nx*nfacet)
-    )
-    )
-    ))
-
-scale_fac <- 1/G21_sd$wpd_glm %>% sd()
-
-
-# checking the fit of the residuals from glm fit
-
-# fitted_glm <- fitted(glm_fit, type = "response")
-# residuals <- residuals.glm(glm_fit, type = "response")
-# hist(residuals)
-
-
-#h = augment(glm_fit)
-# ggplot(h) +
-#   geom_histogram(aes(x = .resid))
-
-
-# residual <- G21_median$actual  - fitted_glm
-# 
-# hist(residual)
-
-
-
-G21 %>% 
-  ggplot(aes(x=log(nx*nfacet),
-             y = (value - (1/(intercept + slope*log(nx*nfacet)
-                    )
-                    )
-             )
-  )
-  ) +
-  geom_point(alpha = 0.5, size = 0.5) + stat_summary(fun=mean, geom="line", aes(group=1), color = "blue") + 
-  ylab("wpd_glm = wpd - 1/(a  + b*log(nx*nfacet))")
-```
 
 ```{r glm-tab}
 broom::tidy(glm_fit) %>% kable(caption = "Results of generalised linear model to capture the relationship between wpd and number of comparisons.")
@@ -774,24 +476,6 @@ broom::tidy(glm_fit) %>% kable(caption = "Results of generalised linear model to
 
 ```{r wpd-glm-dist, fig.cap = " The distribution of $wpd_{glm}$ is plotted. The distributions are more similar across higher nx and nfacet and dissimilar for fewer nc and nfacets."}
 
-
-G21_glm <- G21 %>% 
-  mutate(wpd_glm =  (value - (1/(intercept + slope*log(nx*nfacet)
-                    )
-                    )
-             ),
-         wpd_glm_scaled = ((wpd_glm*320)))
-
-#G21_glm$wpd_glm_scaled %>% sd()
-
-
-G21_glm %>% 
-  ggplot() +
-  geom_density(aes(x = wpd_glm), 
-                   fill = "blue") +
-  facet_grid(nx~nfacet,
-             labeller = "label_both") +
-  theme(legend.position = "bottom") 
 ```
 
 
@@ -810,91 +494,12 @@ We see that the transformation through the modeling approach leads to very simil
 The measure $wpd_{glm}$ has a $\hat \mu_{glm} = 0$ and $\hat sd_{glm} = 0.003$ whereas the measure $wpd_{perm}$ which is a z-score, has an expected normal distribution with  $\hat \mu_{perm} = 0$ and $\hat sd_{perm} = 1$. To bring them to the same scale, we have defined $wpd_{glm-scaled} = wpd_{glm}*\frac{\hat sd_{perm}}{\hat sd_{glm}}$, which changes the scale of $wpd_{glm}$ without changing the location. The measure $wpd_{glm-scaled}$ seems to roughly follow a normal distribution except in the tails as could be seen in Figure \ref{fig:hist-qq} and the very method of permutation approach ensures that $wpd_{perm}$ is also normally distributed. Further, they are brought to similar scale and location and hence could be compared or used interchangeably for different comparisons based on their performance.
 
 ```{r hist-qq, fig.cap = "In panel a, the histogram of $wpd_{glm-scaled}$ is plotted. In part b, the QQ plot is shown with the theoretical quantiles on the x-axis and $wpd_{glm-scaled}$ quantiles on the y-axis. The distribution looks symmetric and looks like normal except in the tails."}
-hist <- ggplot(G21_glm) +
-  geom_histogram(aes(x = wpd_glm_scaled)) +
-  ggtitle("a") + xlab("transformed wpd using glm approach")
 
-
-p <- ggplot(G21_glm, aes(sample = wpd_glm_scaled))
-qqplot <-  p + geom_qq() + geom_qq_line() + coord_fixed(ratio = 4/5) +
-  ggtitle("b")
-
-# G21_glm <- G21 %>% 
-#     mutate(wpd_glm =  (value - (1/(intercept + slope*log(nx*nfacet)
-#     )
-#     )
-#     ),
-#     wpd_glm_scaled = 300*(wpd_glm))
-
- # G21_glm$wpd_glm_scaled %>% 
- #   range()
-hist + qqplot
 ```  
 
 ```{r dist-new-same-scale-link, fig.cap = "$wpd_perm$ and $wpd_{glm-scaled}$ are plotted together on the same scale. They also have the same location and hence the values from these two approaches could be compared across panels. $wpd_{glm-scaled}$ would be used to normalise $wpd_{raw}$ for higher $nx$ and $nfacet$ and $wpd_{glm-scaled}$ would be used for smaller levels to alleviate the problem of computational time."}
 
-G21_permutation <- read_rds(here("simulations/norm/null_design_quantrans_nperm/data-agg/all_data_wpd_N01.rds")) %>%
-  rename("wpd_permutation" = "value")
 
-
-# G21_model_data <- G21 %>%
-#   mutate(model =
-#            ((1/value)
-#                   - intercept -
-#                     slope*log(nx*nfacet))/slope) %>%
-#   mutate(model_trans =
-#            (model - mean(model))/sd(model))
-
-# G21_model_data$model %>% summary()
-
-G21_all_data <- G21_permutation %>% 
-  # left_join(G21_lm, by = c("nx", "nfacet", "perm_id")) %>% 
-  left_join(G21_glm, by = c("nx", "nfacet", "perm_id")) %>% 
-  pivot_longer(cols = c(3, 7),
-               names_to = "type_estimate",
-               values_to = "value_estimate")
-G21_all_data$type_estimate = factor(G21_all_data$type_estimate , levels = c( "wpd_permutation", "wpd_glm_scaled"))
-
-
-G21_all_data %>% 
-  filter(type_estimate %in% c("wpd_glm_scaled", "wpd_permutation")) %>% 
-  ggplot() +
-  geom_density(aes(x = value_estimate, 
-                   fill = type_estimate), alpha = 0.5) +
-  facet_grid(nx~nfacet,
-             labeller = "label_both") +
-  theme(legend.position = "bottom") +
-  scale_fill_manual(values = c( "#D55E00", "#0072B2")) +
-  xlab("wpd_norm2") +
-  scale_x_continuous(breaks = c(-5, -3, 0, 3, 5))
-
-# G21_all_data %>% 
-#   filter(type_estimate %in% c("wpd_permutation", "wpd_glm")) %>% 
-#   ggplot() +
-#   geom_density(aes(x = value_estimate, 
-#                    fill = type_estimate), 
-#                alpha = 0.7) +
-#   facet_grid(nx~nfacet,
-#              labeller = "label_both") +
-#   theme(legend.position = "bottom") +
-#   scale_fill_manual(values = c("#CC79A7", "#0072B2")) +
-#   xlab("wpd_norm2")
-
-# are scales same
-# 
-# G21_model_data %>%
-#   group_by(nx, nfacet) %>% 
-#   summarize(sd_model = sd(model))
-#   
-# G21_all_data %>%
-#   filter(type_estimate == c("perm_trans")) %>% 
-#   select(value_estimate) %>% 
-#   range()
-# 
-# G21_all_data %>%
-#   filter(type_estimate == c("wpd_glm_scaled")) %>% 
-#   select(value_estimate) %>% 
-#   range()
 ```
 
 Thus, the $wpd_{norm}$ is defined as follows:
@@ -994,113 +599,25 @@ The results for this section is WIP and to be included in details in the Supplem
 
 ```{r varall-new}
 
-sim_varall_normal <- function(nx, nfacet, mean, sd, w) {
-  dist_normal((mean + seq(0,
-    (nx *
-      nfacet - 1),
-    by = 1
-  ) * w), sd)
-}
-sim_panel_varall <- sim_panel(
-  nx = 2, nfacet = 3,
-  ntimes = 500,
-  sim_dist = sim_varall_normal(2, 3, 0, 1, 10)
-) %>% unnest(data)
-
-set.seed(9999)
-varall <- compute_pairwise_norm(sim_panel_varall, 
-                           gran_x = "id_x",
-                           gran_facet = "id_facet",
-                           response = sim_data, 
-                           nperm = 200
-)
-
-# plot
-p_varall <- sim_panel_varall %>%
-  ggplot(aes(x = as.factor(id_x), y = sim_data)) + facet_wrap(~id_facet) + geom_boxplot() +
-  ggtitle(paste("d", round(varall, 2))) + xlab("x level")
 ```
 
 
 
 ```{r varx-new}
-sim_varx_normal <- function(nx, nfacet, mean, sd, w) {
-   rep(dist_normal((mean + seq(0, nx - 1, by = 1) * w), sd), nfacet)
- }
 
-sim_panel_varx <- sim_panel(
-   nx = 2, nfacet = 3,
-   ntimes = 500,
-   sim_dist = sim_varx_normal(2, 3, 0, 1, 10)
- ) %>% unnest(data)
-
-
-set.seed(9999)
-varx <- compute_pairwise_norm(sim_panel_varx, 
-                           gran_x = "id_x",
-                           gran_facet = "id_facet",
-                           response = sim_data, 
-                           nperm = 200
-)
-
-# plot
-p_varx <- sim_panel_varx %>%
-  ggplot(aes(x = as.factor(id_x), y = sim_data)) + facet_wrap(~id_facet) + geom_boxplot() +
-    ggtitle(paste("c", round(varx, 2))) + xlab("x level")
 ```
 
 
 ```{r varf-new}
-sim_varf_normal <- function(nx, nfacet, mean, sd, w) {
-  rep(dist_normal((mean + seq(0, nfacet - 1, by = 1) * w), sd), each = nx)
-}
-sim_panel_varf <- sim_panel(
-  nx = 2, nfacet = 3,
-  ntimes = 500,
-  sim_dist = sim_varf_normal(2, 3, 0, 1, 10)
-) %>% unnest(data)
-
-
-set.seed(9999)
-varf <- compute_pairwise_norm(sim_panel_varf, 
-                           gran_x = "id_x",
-                           gran_facet = "id_facet",
-                           response = sim_data, 
-                           nperm = 200
-)
-
-p_varf <- sim_panel_varf %>%
-  ggplot(aes(x = as.factor(id_x), y = sim_data)) + facet_wrap(~id_facet) + geom_boxplot() +
-    ggtitle(paste("b", round(varf, 2))) + xlab("x level")
 ```
 
 
 ```{r null-new}
-sim_panel_null <- sim_panel(
-   nx = 2,
-   nfacet = 3,
-   ntimes = 500,
-   sim_dist = distributional
-   ::dist_normal(0, 1)
-) %>% unnest(c(data))
 
-set.seed(9999)
-
-null <- compute_pairwise_norm(sim_panel_null, 
-                           gran_x = "id_x",
-                           gran_facet = "id_facet",
-                           response = sim_data, 
-                           nperm = 200
-)
-
-p_null <- sim_panel_null %>%
-  ggplot(aes(x = as.factor(id_x), y = sim_data)) + facet_wrap(~id_facet) + geom_boxplot() +
-    ggtitle(paste("a", round(null, 2))) + xlab("x level") 
 ```
 
 ```{r plot-all-new3, fig.cap = "$wpd_{norm}$ values for the four illustrative designs are presented here. As expected, the value of $wpd_{norm}$ under null design is the least (a), followed by (b, c and d). Moreover, the relative difference is interesting as c is closer to d than b, since the differences between x categories are up-weighed by design."}
-library(patchwork)
-(p_null + p_varf)/(p_varx + p_varall)
+
 ```
 
 ## Simulation environment
